<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".Login" android:background="#d9e7ff">


    <TextView
            android:id="@+id/Movie4Us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/brightons"
            android:gravity="center"
            android:text="@string/Movie4Us"
            android:textColor="#2e74ff"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="jelly_bean" android:background="#00F6F5F5" app:drawableTint="#05DF2626"
    />
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.799"
            tools:layout_editor_absoluteX="-16dp" android:id="@+id/constraintLayout3">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_user"
                    android:drawableRight="@drawable/ic_user"
                    android:hint="login"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    tools:targetApi="jelly_bean" android:singleLine="false" android:textAllCaps="false"
                    android:textSize="21sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
                tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_pass"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/ic_pass"
                    android:fontFamily="@font/roboto"
                    android:textStyle="bold"
                    tools:targetApi="jelly_bean" android:textSize="21sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/buttonLogin"
                android:background="@drawable/buttonshape"
                android:textColor="#D9E7FF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:shadowColor="#D9E7FF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="20sp"
                android:fontFamily="@font/roboto"
                app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"/>
        <TextView
                android:id="@+id/signUpText"
                android:textColor="#2e74ff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto"
                android:text="@string/create_an_account"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                tools:targetApi="jelly_bean" android:textSize="25sp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
            android:layout_width="192dp"
            android:layout_height="143dp" app:srcCompat="@drawable/logo" android:id="@+id/logo"
            android:layout_marginEnd="110dp" android:layout_marginRight="110dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/Movie4Us"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="109dp"
            android:layout_marginStart="109dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>