<resources>
    <string name="app_name">Movie4Us</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Sign in failed"</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="signuphere">signuphere</string>
    <string name="login">Sign in</string>
    <string name="signup">SignUp</string>
    <string name="fullname">fullname</string>
    <string name="email">email</string>
    <string name="Movie4Us">Movie4Us</string>
    <string name="SignUp">Sign up</string>
    <string name="choice">Choose category:</string>
    <string name="create_an_account"><u>Create an account</u></string>
    <string name="already_have_an_account_login"><u>Already have an account? Sign in!</u></string>


    <string-array name="categoriesList">
        <item>War</item>
        <item>Music</item>
        <item>Comedy</item>
        <item>Documentary</item>
        <item>History</item>
        <item>Western</item>
        <item>Adventure</item>
        <item>Fantasy</item>
        <item>Science Fiction</item>
        <item>Animation</item>
        <item>Crime</item>
        <item>Mystery</item>
        <item>Drama</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>Horror</item>
        <item>Action</item>
        <item>Romance</item>
        <item>Family</item>
    </string-array>
</resources>